--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,26 +19,18 @@
 	<script src="/webjars/angularjs/1.4.9/angular-route.js"></script>
 	<script src="/js/app.js"></script>
 	<script src="/js/controller.js"></script>
-	<link rel="stylesheet"
-		href="/webjars/bootstrap/3.3.7-1/css/bootstrap.css">
+	<link rel="stylesheet" href="/webjars/bootstrap/3.3.7-1/css/bootstrap.css">
 	<h2>Musical Lotto / Musical Tambola</h2>
-	<div class="home-section">
-		<ul class="menu-list">
-			<li><a href="#/users">Users</a></li>
-			<li><a href="#/roles">Roles</a></li>
-			<li><a href="#/ticket">Tickets</a></li>
-		</ul>
-	</div>
 	<form>
-  		<div class="form-group">
+  	<div class="form-group">
 	<div class="col-xs-2">
 		<span class="label label-info">Enter Number of Tickets</span> 
-		<input class="form-control" id="ex1" type="text">
+		<input class="form-control" id="ex1" type="text"  ng-model="noOfTickets">
 		<a href="#/ticket"><button type="button" class="btn btn-primary">Generate Tickets</button></a>
+		<button ng-click="printDiv('ticketsArea');" ng-controller="printController">Print Tickets</button>
 	</div>
 	</div>
 	</form>
-	<div ng-view></div>
-
+	<div ng-view id="ticketsArea" ></div>
 </body>
 </html>
